--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
 	font-size: 1rem;
 	line-height: 1.5;
 	background-color: #e5e5e5;
-}
-
-.container-header {
-	text-align: center;
+	margin: 0;
+  padding: 0;
 }
